testing/tests/ui/name_mismatch_endmacro.stderr
error: expected name `foo` in `endmacro` tag, found `not_foo`
 --> <source attribute>:1:42
  |
       1 | {% macro foo(arg) %} {{arg}} {% endmacro not_foo %}
         |                                          ^ close to this token
         |
 --> tests/ui/name_mismatch_endmacro.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
